# decimal

./: CMakeLists.txt  LICENSE  README.md  conanfile.py
cmake/: decimalConfig.cmake.in
include/: decimal.h
test/: CMakeLists.txt  main.cpp  tests.cpp
test_package/: CMakeLists.txt  conanfile.py  test-consumer.cpp
